fix: slider arrow height and cart icon height was off on safari
fixed relying on flex properties

--- a/src/components/FeaturedProducts/sliderFeaturedProducts.scss
+++ b/src/components/FeaturedProducts/sliderFeaturedProducts.scss
@@ -63,6 +63,7 @@
 
 .slick-slider {
   display: flex !important;
+  align-items: center;
 }
 
 .slick-slide {
